forgot alignement issue, fixed

--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ footer .container {
 	}
 	#banner-image {
 		width: 40%;
-		left: 60%;
+		left: 70%;
 		top: 25px;
 		max-width: 350px;
 	}
